force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Actuals_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>CC_Actuals_Last_Update__c</fullName>
    <label>Actuals: Last Update</label>
    <type>DateTime</type>
</CustomField>