force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Billable_Hours_Internal__c.field-meta.xml
<CustomField>
    <fullName>CC_Billable_Hours_Internal__c</fullName>
    <label>Billable Hours (Internal)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>