force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Billings__c.field-meta.xml
<CustomField>
    <fullName>CC_Billings__c</fullName>
    <label>Billings</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>