force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Bookings__c.field-meta.xml
<CustomField>
    <fullName>CC_Bookings__c</fullName>
    <label>Bookings</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>