force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Estimated_Hours_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>CC_Estimated_Hours_at_Completion__c</fullName>
    <label>Estimated Hours at Completion</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>