force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_External_Cost__c.field-meta.xml
<CustomField>
    <fullName>CC_External_Cost__c</fullName>
    <label>External Cost</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>