force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Hours_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Hours_Cut_Off_Date__c</fullName>
    <label>Hours Cut Off Date</label>
    <type>Date</type>
</CustomField>