force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Costs__c</fullName>
    <label>Other Costs</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>