force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Percent_Hours_Complete__c.field-meta.xml
<CustomField>
    <fullName>CC_Percent_Hours_Complete__c</fullName>
    <label>Percent Hours Complete</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>