force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Percent_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>CC_Percent_Time_Used__c</fullName>
    <label>Percent Time Used</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>