force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>CC_Planned_Hours__c</fullName>
    <label>Planned Hours</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>