force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Scheduled_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>CC_Scheduled_Hours_Remaining__c</fullName>
    <label>Scheduled Hours Remaining</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>