force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Total_Submitted_Hours__c.field-meta.xml
<CustomField>
    <fullName>CC_Total_Submitted_Hours__c</fullName>
    <label>Total Submitted Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>