force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/CC_Variance_from_Plan__c.field-meta.xml
<CustomField>
    <fullName>CC_Variance_from_Plan__c</fullName>
    <label>Variance from Plan</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>