force-app/main/default/objects/pse__VersionItem_ProjectDetail__c/fields/Non_Billable_Hours_External__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Hours_External__c</fullName>
    <label>Non Billable Hours (External)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>